--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -18,18 +18,25 @@
 <script type='text/javascript' src='../../static/article/article_index/js/jiazai55fe.js?ver=4.9.5'></script>
 </head>
 <body>
-{#<header id="header-web">#}
-{#  <div class="header-main"> <a href="/my_article/article_index/1" class="logo" title="克隆生物" rel="home"><img src="../../static/article/article_index/images/klsw_logo.png" alt="克隆生物Logo"></a>#}
-{##}
-{#    <nav class="header-nav">#}
-{#      <div class="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95-container"><ul id="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95" class="menu"><li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1218"><a href="/my_article/article_index/1">首页</a></li>#}
-{##}
-{#</ul></div>    </nav>#}
+<header id="header-web">
+  <div class="header-main"> <a href="/my_article/article_index/1" class="logo" title="克隆生物" rel="home"><img src="../../static/article/article_index/images/klsw_logo.png" alt="克隆生物Logo"></a>
+
+    <nav class="header-nav">
+      <div class="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95-container">
+          <ul id="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95" class="menu">
+              <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1218"><a href="/my_article/article_index/1">首页</a></li>
+              {% if current_user is None %}
+              <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1218"><a href="/user_login">登录</a></li>
+              <li id="menu-item-127" class="menu-item menu-item-type-post_type menu-item-object-page m.enu-item-127"><a href="/user_regist">注册</a></li>
+              {% else %}
+              <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1218"><a href="/my_admin/user_account">个人中心</a></li>
+              {% end %}
+</ul></div>    </nav>
 {#	  	<form method="get" class="search" action="" >#}
 {#      <input class="text" type="text" name="s" placeholder="Search" value="">#}
 {#    </form>#}
-{#  </div>#}
-{#</header>#}
+  </div>
+</header>
 <!--header-web-->  <article class="box-single">
   
     <header class="pagetitle">
@@ -137,7 +144,7 @@
 	  <div class="bottomlist">
       <div class="xinlan"> <a href="https://weibo.com/u/5334115236" target="_blank" ><img src="../../static/article/article_index/images/xinlan.png" alt="新浪微博" title="新浪微博"></a> </div>
       <div class="weixin2">
-        <div class="weixin"><span>公众号 : CloneOrganisms</span> <img src="../../static/article/article_index/images/weixin.png" alt="微信公众号"  title="微信公众号"> <img src="../../static/article/article_index/images/weixin.jpg"/ class="xixii" alt="微信公众号" ></div>
+        <div class="weixin"><span>公众号 : clonesw</span> <img src="../../static/article/article_index/images/weixin.png" alt="微信公众号"  title="微信公众号"> <img src="../../static/article/article_index/images/weixin.jpg"/ class="xixii" alt="微信公众号" ></div>
       </div>
     </div>
 
@@ -149,7 +156,7 @@
 {#<li id="menu-item-1194" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1194"><a href="about.html">关于我们</a></li>#}
 {#</ul></div>#}
 
-	   <div class="botext"><a href="index.html">
+	   <div class="botext"><a href="/my_article/article_index/1">
         ©克隆生物        </a>
        &nbsp;&nbsp;&nbsp;&nbsp;以后会陆续上线更多功能并开放更多权限，敬请期待. </div>
         <div class="tongji"><script> var _hmt = _hmt || []; (function() {   var hm = document.createElement("script");   hm.src = "../hm.baidu.com/hmd51d.js?74b4edd4d9170ff3878a0902e06b4c08";   var s = document.getElementsByTagName("script")[0];    s.parentNode.insertBefore(hm, s); })(); </script></div>
@@ -179,7 +186,7 @@
     {#function get_cookie(name){var xsrf_cookies=document.cookie.match("\\b"+name+"=([^;]*)\\b");return xsrf_cookies[1]}$(document).ready(function(){$("#submit").click(function(event){var now_time=new Date();event.preventDefault();var comments=$("#comment").val();$.ajax({"url":"/my_article/article_comment","type":"post","data":{"comment":comments,"article_id":$("#comment_post_ID").val(),},"headers":{"X-XSRFTOKEN":get_cookie("_xsrf")},"success":function(data){if(data["status"]==200){swal({title:"<small>评论成功</small>",text:"<span style='color: gray'>"+data["msg"]+"</span>",html:true},function(){$('ol[name="add_article_comment"]').prepend('<li id=""> <span> <img src="../../static/avatar_images/useravatars/{{ current_user.avatar }}" class="avatar avatar-120" height="120" width="120"> </span>\n'+'  <div class="mhcc">\n'+"    <address>\n"+"   {{ current_user.name }}  "+now_time.toLocaleTimeString()+"\n"+"    </address>\n"+"        <p>"+comments+"</p>\n"+"  </div>\n"+"  </li>")})}else{swal({title:"<small>评论失败</small>",text:"错误信息：<span style='color: gray'>"+data["msg"]+"<span>",html:true})}}})})});#}
 
 
-</script>
+
 <script type='text/javascript' src='../../static/article/article_comment/js/add_comment.js'></script>
 <link rel="stylesheet" type="text/css" href="{{ static_url('sweetalert/sweetalert.css') }}">
 <script src="{{ static_url('sweetalert/sweetalert.min.js') }}"></script>
