--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -27,7 +27,7 @@
               <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1218"><a href="/my_article/article_index/1">首页</a></li>
               {% if current_user is None %}
               <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1218"><a href="/user_login">登录</a></li>
-              <li id="menu-item-127" class="menu-item menu-item-type-post_type menu-item-object-page m.enu-item-127"><a href="/user_regist">注册</a></li>
+              <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1218"><a href="/user_regist">注册</a></li>
               {% else %}
               <li id="menu-item-1218" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1218"><a href="/my_admin/user_account">个人中心</a></li>
               {% end %}
